@@ -1,9 +1,9 @@
 define: prefix docs/languages/java/reactive-streams-driver
 define: base https://www.mongodb.com/${prefix}
-define: versions v4.x v5.0 v5.1 v5.2 v5.3 main
+define: versions v4.x v5.0 v5.1 v5.2 v5.3 v5.4 main
 
 symlink: upcoming -> main
-symlink: current -> v5.3
+symlink: current -> v5.4
 
 raw: ${prefix}/ -> ${base}/current/
 raw: ${prefix}/stable -> ${base}/current/
