@@ -15,13 +15,13 @@ toc_landing_pages = [
     "/getting-started/",
     "/secure-your-data/",
     "/data-formats/",
-    "/upgrade/"
-    ]
+    "/upgrade/",
+]
 
 [constants]
 driver-short = "Java Reactive Streams driver"
 driver-long = "MongoDB Java Reactive Streams Driver"
-version = "5.3"
+version = "5.4"
 full-version = "{+version+}.0"
 api = "https://mongodb.github.io/mongo-java-driver/{+version+}/apidocs"
 rs-driver-api = "{+api+}/mongodb-driver-reactivestreams/com/mongodb/reactivestreams/client"
