@@ -49,6 +49,11 @@ and features:
       the :ref:`MONGODB-OIDC: Kubernetes <java-rs-auth-kubernetes>`
       section of the Enterprise Authentication Mechanisms guide
 
+   .. replacement:: atlas-query-operators
+
+      the `SearchOperator <{+core-api+}/client/model/search/SearchOperator.html>`__
+      interface API documentation
+
 .. _javars-version-5.3:
 
 What's New in 5.3
@@ -104,6 +109,12 @@ and features:
 
       the :atlas:`Atlas Vector Search Quick Start
       </atlas-vector-search/tutorials/vector-search-quick-start/>`
+
+   .. replacement:: csot-link
+
+      the `MongoClientSettings.Builder.timeout()
+      <{+core-api+}/MongoClientSettings.Builder.html#timeout(long,java.util.concurrent.TimeUnit)>`__
+      API documentation
 
 .. _javars-version-5.1.3:
 
